<resources>
    <!-- Main Title -->
    <string name="app_name">Petly.</string>


    <!-- Activity and NvDrawer activity name titles-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_1">Pet Management</string>
    <string name="title_2">Maps and Recreation</string>
    <string name="title_activity_map">Locations</string>
    <string name="loginButton">Login</string>
    <string name="title_activity_manage_account">Register</string>
    <string name="registerButton">Register</string>
    <string name="delete_account">Delete Account</string>
    <string name="title_activity_friends">Friends</string>
    <string name="search_button_text">Search</string>
    <string name="refresh_button">Refresh</string>
    <string name="title_3">Friends</string>
    <string name="title_4">Licensing</string>
    <string name="title_activity_about">About</string>
    <string name="post_button">Post</string>
    <string name="register_button_text">Register</string>

    <!-- In App Values -->
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="invalid_text_entry_text">Invalid Username/Password, Letters and numbers allowed</string>
    <string name="KEY_REGISTERED">isRegistered</string>
    <string name="KEY_USER_USERNAME">userUserName</string>
    <string name="KEY_USER_PASSWORD">userPassword</string>
    <string name="new_username_string">New Username</string>
    <string name="new_password_string">New Password</string>
    <string name="new_petname_string">Your Pet\'s Name</string>
    <string name="username_string">Username</string>
    <string name="password_string">Password</string>
    <string name="SEARCH_FRIEND_STRING">Search for friends!</string>
    <string name="title_5">Logout</string>
    <string name="navigate_button">Navigate!</string>
    <string name="set_beacon_button">Set Beacon</string>
    <string name="filter_button">Filter</string>
    <string name="go_button">GO!</string>
    <string name="username_text">USERNAME</string>

    <string name="activity_name_liscense">Licensing Information</string>
    <string name="activity_name_email_us">Feedback</string>

    <string name="Dogs_button">Dogs</string>
    <string name="Cats_button">Cats</string>
    <string name="textView5">A pet license and a pet microship can be attained at a ChipTruck. The cost for a dog is $35, and the cost for a cat is $20. No appointment necessory, just drop by with your dog. Find the location of your chiptruck here:</string>
    <string name ="textView4">Cost and Fees</string>
    <string name="textView3">Licensing your pet aids in the fast return of your pet should it get lost. It also allows animal shelters to identify your pet and provides AnimalCare until you are contacted. </string>
    <string name="PawsLink">http://goo.gl/s3pkvP</string>
    <string name="OtherWay">OR</string>
    <string name="phone">4163387387</string>
    <string name="CallBluePaws">Call Blue Paws To License</string>
    <string name="loading_text">Loading...</string>
    <string name="action_post_button">Post</string>
    <string name="petname_text">Petname</string>


    <string name="email_button">Send Email</string>
    <string name="Subject">Subject</string>
    <string name="message">Message</string>
    <string name="title_6">Email Us!</string>
    <string name="contact_email">woburndev@outlook.com</string>


    <string name="parkBlue">#88a6f8</string>
    <string name="vetRed">#ed9e9e</string>
    <string name="filterDog">Now showing locations of only Off-Leash Parks</string>
    <string name="filterVet">Now showing locations of only Vetrinary Clinics</string>
    <string name="typeDogPark">Type: Of-Leash Park</string>
    <string name="enter_subject_string">Enter Subject here</string>
    <string name="post_message_hint">Thoughts, review, feedback</string>


</resources>
