<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.username.petly.DisplayMessageActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/dogimage2"
        android:scaleType="centerCrop"

        />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:background="#88ffffff"
            android:textStyle="bold"
            android:padding="15dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Why license?"
            android:id="@+id/textView2"
            android:textSize="25dp"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#88ffffff"
            android:layout_marginBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textView3"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.01" />

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="#88ffffff"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:text="@string/textView4"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="#88ffffff"
            android:text="@string/textView5"
            android:layout_marginBottom="10dp"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.01" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="#88ffffff"
            android:text="@string/PawsLink"
            android:layout_marginBottom="10dp"
            android:id="@+id/textView6"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/OtherWay"
            android:textSize="25dp"
            android:background="#88ffffff"
            android:layout_marginBottom="10dp"
            android:id="@+id/OtherWay"
            android:layout_gravity="center_horizontal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CallBluePaws"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>
</RelativeLayout>
