<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.username.petly.EmailUsActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/catimage"
        android:scaleType="fitCenter"
        android:id="@+id/imageView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/toolbar">

        <TextView
            android:layout_width="match_parent"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:background="#88ffffff"
            android:textStyle="bold"
            android:padding="15dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Subject"
            android:id="@+id/textView"
            android:layout_margin="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:id="@+id/SubjectText"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:background="#88ffffff"
            android:textStyle="bold"
            android:padding="15dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/message"
            android:id="@+id/Message"
            android:layout_margin="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textStyle="italic"
            android:background="#10ffffff"
            android:padding="20dp"
            android:layout_margin="5dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/MessageText"
            android:layout_weight="0.69" />

        <Button
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:background="#bcbcbc"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/email_button"
            android:id="@+id/send_email"
            android:layout_margin="5dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:textColor="@color/abc_search_url_text_selected"
            />

        <Button
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textColor="@color/abc_search_url_text_selected"
            android:layout_height="wrap_content"
            android:background="#bcbcbc"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Call us Now"
            android:id="@+id/call_now_button"
        />

    </LinearLayout>
</RelativeLayout>
