<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:background="#82bd80">

            <Button
                android:id="@+id/nav1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:background="#82bd80"
                android:onClick="Navv"
                android:text="@string/navigate_button"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/BeaconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#82bd80"
                android:onClick="BeaconCreate"
                android:text="@string/set_beacon_button"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:background="#82bd80"
                android:onClick="Filter"
                android:text="@string/filter_button"
                android:textColor="#ffffff" />

        </FrameLayout>
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"

            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="313dp"
            tools:context="com.example.username.petly.MapsActivity"
            android:layout_gravity="center_horizontal|top" />

        <LinearLayout
            android:id="@+id/filterPane"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:touchscreenBlocksFocus="false"
            android:transitionGroup="false"
            android:layout_gravity="center_horizontal|top">

            <Button
                android:id="@+id/dog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#88a6f8"
                android:onClick="Filter1"
                android:text="Off-Leash Parks"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/vet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15pt"
                android:background="#ed9e9e"
                android:onClick="Filter1"
                android:text="Vet Clinics"
                android:textColor="#ffffff" />
        </LinearLayout>

    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:layout_marginBottom="0dp">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#82bd80"
            android:orientation="vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/goText0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_text"
                    android:textColor="#ffffff"
                    android:textSize="10pt" />

                <Button
                    android:id="@+id/go_button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:singleLine="true"
                    android:text="@string/go_button"
                    android:textColor="#FFFFFF" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="10pt"
                    android:layout_height="match_parent"
                    android:background="#ffffff" />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/goText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_text"
                    android:textColor="#ffffff"
                    android:textSize="10pt" />

                <Button
                    android:id="@+id/go_button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#82bd80"
                    android:singleLine="true"
                    android:text="@string/go_button"
                    android:textColor="#FFFFFF" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="10pt"
                    android:layout_height="match_parent"
                    android:background="#ffffff" />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/goText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_text"
                    android:textColor="#ffffff"
                    android:textSize="10pt" />

                <Button
                    android:id="@+id/go_button_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#82bd80"
                    android:nestedScrollingEnabled="true"
                    android:singleLine="true"
                    android:text="GO!"
                    android:textColor="#FFFFFF" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="10pt"
                    android:layout_height="match_parent"
                    android:background="#ffffff" />


            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/goText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_text"
                    android:textColor="#ffffff"
                    android:textSize="10pt" />

                <Button
                    android:id="@+id/go_button_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#82bd80"
                    android:nestedScrollingEnabled="true"
                    android:singleLine="true"
                    android:text="@string/go_button"
                    android:textColor="#FFFFFF" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="10pt"
                    android:layout_height="match_parent"
                    android:background="#ffffff" />


            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>



